# rust-substrate-example

./: Cargo.toml  README.md
event/: Cargo.toml
event/src/: lib.rs
extrinsic/: Cargo.toml
extrinsic/src/: lib.rs
init/src/: lib.rs
src/: main.rs
