[package]
name = "rust-substrate"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-core = { version = "6.0.0", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git"}
sp-keyring = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
init = {path = "init"}
extrinsic = {path = "extrinsic"}
event = {path = "event"}
